fixed text overlap

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@
     margin: 30px 0 30px 40px;
     line-height: 25px;
     color: #919191;
+    position: relative;
 }
 .banner-img{
     width: 50%;
